--- a/src/components/VenueTable/index.module.scss
+++ b/src/components/VenueTable/index.module.scss
@@ -6,7 +6,7 @@
   border-color: #321fdb !important;
   font-size: 0.875rem !important;
   font-weight: 400 !important;
-  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2) !important;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2) !important;
   width: 300px;
 }
 
